# Aequilibrium

./: .gitignore  pyproject.toml
src/aequilibrium/: bookkeeper.py  market_data.py
tests/integration/: test_bookkeeper_scenarios.py
tests/unit/: test_bookkeeper.py  test_marketdata.py
